# From-Bangumi-to-Obsidian

./: Bangumi.py  CMakeLists.txt  LICENSE  README.md  Start.py  credentials.txt  getInfo.py  get_characters.c  get_ids.c  get_info.c  getcharacters.c  getinfo.c  http.c  main.c  markdown.c  menus.c  read_certs.c  read_ids.c  readcert.c  readids.c  test.c  work.h  writeinfo.c
